# matrix-crypto-bridge

./: .gitignore  .gitlab-ci.yml  BUILD_GUIDE.md  CI_CD_GUIDE.md  CI_CD_SETUP.md  Cargo.toml  DIAGNOSIS.md  GITLAB_CI_CD_SETUP.md  LICENSE  Matrix Crypto Bridge: Native Rust E2EE for React Native.md  MatrixCryptoBridge.podspec  README.md  RELEASE_GUIDE.md  git-push.sh
.cargo/: config.toml
.github/workflows/: build-and-publish-workspace.yml  build-and-publish.yml  build-android-aar.yml  build-crypto.yml  build-ios-xcframework.yml  publish-npm.yml
build-scripts/: build-and-package.sh  build-android.sh  build-ios.sh  build-local.sh  build-rust.sh  build-simple.sh  build-workspace.sh
fortress-crypto-android/: build.gradle
fortress-crypto-android/src/main/jni/: matrix_crypto_jni.cpp
fortress-crypto-core/: Cargo.toml  build.rs
fortress-crypto-core/src/: error.rs  lib.rs
matrix-crypto-android/: CMakeLists.txt  Cargo.toml  build.rs
matrix-crypto-android/src/: lib.rs
matrix-crypto-android/src/main/kotlin/com/matrix/crypto/: MatrixCryptoBridge.kt  RNMatrixCrypto.kt
matrix-crypto-core/: Cargo.toml  build.rs  uniffi.toml
matrix-crypto-core/src/: crypto.rs  device.rs  error.rs  matrix_crypto.udl
matrix-crypto-ios/: Cargo.toml  build.rs  project.pbxproj
matrix-crypto-ios/src/: lib.rs
react-native-fortress-crypto/: INTEGRATION.md  package-lock.json  package.json  tsconfig.json
react-native-fortress-crypto/src/: CryptoAPI.ts  NativeMatrixCrypto.ts  index.ts
react-native-matrix-crypto/: .npmignore  INTEGRATION.md  package-lock.json  package.json  react-native-matrix-crypto.podspec  tsconfig.json
react-native-matrix-crypto/android/: RNMatrixCryptoModule.kt  build.gradle  proguard-rules.pro
react-native-matrix-crypto/android/src/main/kotlin/com/matrix/crypto/: RNMatrixCrypto.kt  matrix_crypto.kt
react-native-matrix-crypto/ios/: MatrixCryptoBridge.swift  MatrixCryptoBridgeFFI.swift  RNMatrixCrypto.m  RNMatrixCryptoModule.swift  RNMatrixCryptoTurboModule.mm  matrix_crypto.swift  matrix_cryptoFFI.h  matrix_cryptoFFI.modulemap
react-native-matrix-crypto/src/: CryptoAPI.ts  NativeMatrixCrypto.ts  index.ts
