[package]
name = "fortress-crypto-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
matrix-sdk-crypto = "0.7"
# Tokio is not needed - all APIs are synchronous
# Removed: tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uniffi = { version = "0.27", features = ["cli"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
rand = "0.8"
hex = "0.4"

[lib]
# Use staticlib for Android and other cross-compilation targets
# cdylib is not supported for cross-compilation (e.g., aarch64-linux-android)
# UniFFI handles the FFI bindings, so we only need the static library
crate-type = ["staticlib"]

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }
