[package]
name = "matrix-crypto-android"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
matrix-crypto-core = { path = "../matrix-crypto-core" }
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[lib]
# Android: use staticlib which is properly supported
# staticlib creates .a files that can be linked into Android apps
crate-type = ["staticlib", "rlib"]
