[package]
name = "matrix-crypto-android"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
matrix-crypto-core = { path = "../matrix-crypto-core" }
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[lib]
# Android requires cdylib (.so) for JNI dynamic linking
# cargo-ndk handles the compilation properly for Android targets
crate-type = ["cdylib"]
