[package]
name = "matrix-crypto-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
matrix-sdk-crypto = "0.7"
# Tokio is not needed - all APIs are synchronous
# Removed: tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uniffi = { version = "0.27", features = ["cli"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
rand = "0.8"
hex = "0.4"

[lib]
# Generate both cdylib and staticlib for different platforms:
# - Android: cdylib (.so) for JNI dynamic linking
# - iOS: staticlib (.a) for static linking into app binary
# Rust's build system will use the appropriate one based on the target
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }
