[package]
name = "matrix-crypto-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
matrix-sdk-crypto = "0.7"
# Tokio is not needed - all APIs are synchronous
# Removed: tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uniffi = { version = "0.27", features = ["cli"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
rand = "0.8"
hex = "0.4"

[lib]
# Use staticlib as the primary crate type
# Note: Rust doesn't support cdylib for cross-compilation targets (Android, iOS)
# Instead, we produce static libraries that are linked by the native build systems:
# - Android: Static libraries (.a) that Android NDK links and wraps in .so for JNI
# - iOS: Static libraries (.a) that Xcode links directly into the app binary
crate-type = ["staticlib"]

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }
