[package]
name = "matrix-crypto-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
matrix-sdk-crypto = { workspace = true }
vodozemac = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uniffi = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

# No crate-type specified - this is a regular library
# It will be used as a dependency by the Android and iOS wrapper crates

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
