[package]
name = "matrix-crypto-ios"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
matrix-crypto-core = { path = "../matrix-crypto-core" }
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[lib]
# iOS requires staticlib (.a) for static linking into the app binary
crate-type = ["staticlib"]
